--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,9 @@
 on: [push]
 
 jobs:
-  hello_world_job:
+  native:
     runs-on: ubuntu-latest
-    name: A job to say hello
+    name: Native
     steps:
     - uses: actions/checkout@v2
     - id: foo
