--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,9 +6,6 @@ jobs:
     name: Native
     steps:
     - uses: actions/checkout@v2
-    - id: foo
-      uses: notdanilo/cross-test-action@v1
+    - uses: notdanilo/cross-test-action@main
       with:
-        who-to-greet: 'Mona the Octocat'
-    - run: echo random-number ${{ steps.foo.outputs.random-number }}
-      shell: bash
+        platform: web
