--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,4 +8,13 @@ jobs:
     - uses: actions/checkout@v2
     - uses: notdanilo/cross-test-action@main
       with:
+        platform: native
+        args: -- -- --test-threads=1
+  web:
+    runs-on: ubuntu-latest
+    name: Web
+    steps:
+    - uses: actions/checkout@v2
+    - uses: notdanilo/cross-test-action@main
+      with:
         platform: web
