--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,9 @@ jobs:
     name: Native
     steps:
     - uses: actions/checkout@v2
+    - uses: actions-rs/toolchain@v1
+      with:
+        toolchain: stable
     - uses: notdanilo/cross-test-action@main
       with:
         platform: native
@@ -15,6 +18,9 @@ jobs:
     name: Web
     steps:
     - uses: actions/checkout@v2
+    - uses: actions-rs/toolchain@v1
+      with:
+        toolchain: nightly
     - uses: notdanilo/cross-test-action@main
       with:
         platform: web
