--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,4 +13,4 @@ jobs:
         with:
           toolchain: stable
       - run: echo "cargo release patch"
-      - run: echo ${{ toJson(github) }}
+      - run: echo "${{ toJson(github) }}"
