--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,8 +1,9 @@
 on:
   pull_request:
-    branches:
-      - main
-
+    branches-ignore:
+      - '**'
+#    branches:
+#      - main
 jobs:
   native:
     runs-on: ubuntu-latest
