--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,6 +2,9 @@ on:
   push:
     branches:
       - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
   release:
@@ -13,3 +16,4 @@ jobs:
         with:
           toolchain: stable
       - run: echo "${{ github.event.label.name }}"
+      - run: echo "${{ toJson(github) }}"
