--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,30 +1,18 @@
 on:
   pull_request:
-    branches-ignore:
-      - '**'
-#    branches:
-#      - main
+    branches:
+      - main
 jobs:
-  native:
+  check-release:
     runs-on: ubuntu-latest
-    name: Native
+    name: Check Release
     steps:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
-      - uses: notdanilo/cross-test-action@main
+      - uses: notdanilo/cargo-release-action@main
         with:
-          platform: native
-          args: -- -- --test-threads=1
-  web:
-    runs-on: ubuntu-latest
-    name: Web
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions-rs/toolchain@v1
-        with:
-          toolchain: nightly
-      - uses: notdanilo/cross-test-action@main
-        with:
-          platform: web
+          major-label: major
+          minor-label: minor
+          patch-label: patch
