--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "cross-test-action-test"
 version = "0.1.2"
 authors = ["Danilo Guanabara <danguafer@gmail.com>"]
 edition = "2018"
-description = ""
+description = "Testing"
 license = "Apache-2.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
