--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "cross-test-action-test"
-version = "0.1.4"
+version = "0.1.5-alpha.0"
 authors = ["Danilo Guanabara <danguafer@gmail.com>"]
 edition = "2018"
 description = "Testing"
