--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,3 +16,5 @@ jobs:
           major-label: major
           minor-label: minor
           patch-label: patch
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          cargo-token: ${{ secrets.CARGO_TOKEN }}
