--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,9 @@ authors = ["Danilo Guanabara <danguafer@gmail.com>"]
 edition = "2018"
 description = "Testing"
 license = "Apache-2.0"
+readme        = "README.md"
+documentation = "https://docs.rs/cross-test-action-test"
+repository    = "https://github.com/notdanilo/cross-test-action-test"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
